syntax = "proto3";

import "track/v1/track.proto";

package legumeinfo.microservices.microsyntenysearch_service.v1;


service MicroSyntenySearch {
  rpc Search (MicroSyntenySearchRequest) returns (MicroSyntenySearchReply) {}
}


message MicroSyntenySearchRequest {
  repeated string query = 1;
  float matched = 2;
  float intermediate = 3;
}


message MicroSyntenySearchReply {
  repeated legumeinfo.microservices.track.v1.MicroTrack tracks = 1;
}
