syntax = "proto3";

import "structures/track.proto";

package gcv;


message MicroTrack {
  string name = 1;
  Track track = 2;
}
